# Rustful-API

./: README.md  WebServiceStructure.drawio
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
